--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,18 @@ export ERB
 export RUBY
 export RAGEL
 
-SUBDIRS = mp mpio ccf logic
+SUBDIRS = generator mp mpsrc cclog ccf logic
+
+#SUBDIRS = mp mpsrc
+#
+#AM_CPPFLAGS   = -I..
+#AM_C_CPPFLAGS = -I..
+#
+#bin_PROGRAMS = mptest
+#
+#mptest_SOURCES = \
+#	mptest.cc
+#
+#mptest_LDADD = \
+#	mpsrc/libmpio.a
 
