--- a/src/mpsrc/Makefile.am
+++ b/src/mpsrc/Makefile.am
@@ -3,16 +3,16 @@ noinst_LIBRARIES = libmpio.a
 libmpio_a_CPPFLAGS = -I..
 
 libmpio_a_SOURCES = \
-		wavy_core.cc \
+		wavy_base.cc \
+		wavy_out.cc \
 		wavy_connect.cc \
+		wavy_timer.cc \
 		wavy_listen.cc \
-		wavy_output.cc \
-		wavy_net.cc \
-		wavy_timer.cc
+		wavy_signal.cc
 
 noinst_HEADERS = \
 		wavy_core.h \
-		wavy_edge.h \
-		wavy_edge_epoll.h \
-		wavy_edge_kqueue.h
+		wavy_port.h \
+		wavy_port_epoll.h \
+		wavy_port_kqueue.h
 
