--- a/src/logic/proto/Makefile.am
+++ b/src/logic/proto/Makefile.am
@@ -1,34 +1,25 @@
 
 LIBDIR = ../../generator
-LIBS   = $(LIBDIR)/protogen $(LIBDIR)/mplex.rb $(LIBDIR)/phraser.rb $(LIBDIR)/ccfproto.rb
+LIBS   = $(LIBDIR)/protogen $(LIBDIR)/proto.mpl $(LIBDIR)/stub.mpl \
+		 $(LIBDIR)/mplex.rb $(LIBDIR)/phraser.rb $(LIBDIR)/ccfproto.rb
+
 RUN    = $(RUBY) -I$(LIBDIR) $(LIBDIR)/protogen
 
-PROTO_TMPL = $(LIBDIR)/proto.mpl
-STUB_TMPL  = $(LIBDIR)/stub.mpl
+../server/proto.h: ../server/proto.mpl ../server/message.ccf $(LIBS)
+	$(RUN) ../server/proto.mpl ../server/message.ccf $@
 
-../server/proto.h: server.msg $(PROTO_TMPL) $(LIBS)
-	$(RUN) $(PROTO_TMPL) $< $@
-
-../server/stub.h: server.msg $(STUB_TMPL) $(LIBS)
-	$(RUN) $(STUB_TMPL) $< $@
-
-../client/proto.h: client.msg $(PROTO_TMPL) $(LIBS)
-	$(RUN) $(PROTO_TMPL) $< $@
-
-../client/stub.h: client.msg $(STUB_TMPL) $(LIBS)
-	$(RUN) $(STUB_TMPL) $< $@
-
+../server/stub.h: ../server/stub.mpl ../server/message.ccf $(LIBS)
+	$(RUN) ../server/stub.mpl ../server/message.ccf $@
 
 nodist_noinst_HEADERS = \
-	../client/proto.h \
-	../client/stub.h \
 	../server/proto.h \
 	../server/stub.h
 
 EXTRA_DIST = \
 		protogen \
-		client.msg \
-		server.msg
+		../server/message.ccf \
+		../server/proto.mpl \
+		../server/stub.mpl
 
 MOSTLYCLEANFILES = \
 		$(nodist_noinst_HEADERS)
